eq(), first(), last()

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,348 +1,25 @@
 body {
-/*	margin: 0;*/
-}
-/*#c1 {
-	width: 400px;
-	height: 200px;
-	border: 3px solid black;
-	margin: 40px;
-	background-image: url(../img/setka.png);
-	background-size: cover;
-}*/
-/*#test {
-	width: 600px;
-	height: 100px;
-	background: yellow;
-	margin: 50px;
-	position: relative;
-}
-#test2 {
-	width: 10px;
-	height: 100px;
-	background: blue;
-	position: absolute;
-	left: 290px;
-	top: 0;
-}*/
-/*.f,.f2,.f3,.f4,.f5,.f6,.f7 {
-	transition: .3s;
-	position: relative;
-	.imag-e1 {
-		opacity: 0;
-	}
-	.imag-e1 {
-		&.active {
-			transition: .3s;
-			opacity: 1;
-		}
-	}
-	.imag-e2 {
-		opacity: 0;
-	}
-	.imag-e2 {
-		&.active {
-			transition: .3s;
-			opacity: 1;
-		}
-	}
-	.imag-e3 {
-		opacity: 0;
-	}
-	.imag-e3 {
-		&.active {
-			transition: .3s;
-			opacity: 1;
-		}
-	.imag-e4 {
-		opacity: 0;
-	}
-	.imag-e4 {
-		&.active {
-			transition: .3s;
-			opacity: 1;
-		}
-	}
-	}
-	.text-wrap {
-		opacity: 0;
-		&.active {
-			opacity: 1;
-		}
-	}
-	img {
-		width: 100%;
-	}
-}
-.text-wrap {
-	width: 300px;
-	font-size: 16px;
-	display: block;
-	position: absolute;
-	left: -340px;
-	top: 10%;
-	background: #f7f7f7;
-	padding: 20px;
-	&.right {
-		left: auto;
-		right: -340px;
-	}
-}
-.f {
-	position: relative;
-}
-.f.animated {
-	animation-duration: 2s;
-}
-.f2.animated {
-	animation-duration: 2s;
-}
-.f3.animated {
-	animation-duration: 2s;
-}
-.f4.animated {
-	animation-duration: 2s;
-}
-.f5.animated {
-	animation-duration: 2s;
-}
-.f6.animated {
-	animation-duration: 2s;
-}
-.f7.animated {
-	animation-duration: 2s;
-}*/
-/*.slider {
-	img {
-		width: 300px;
-	}
-}
-p {
-	cursor: pointer;
-	&:hover {
-		background: grey;
-	}
 }
 
-#slider {
-	width: 384px;
-	height: 128px;
-	border: 5px solid black;
-	margin: 50px auto;
-	overflow: hidden;
-}
-
-#polosa {
-	width: 896px;
-	position: relative;
-	left: 0;
-	transition: all ease 1s;
-}
-
-#polosa img {
-	width: 128px;
-	float: left;
-}
-
-#polosa::after {
-	content: "";
-	display: block;
-	clear: both;
-}
-.tabs-item {
-	padding-top: 40px;
+.first-list {
 	display: inline-block;
-	#prev {
-		display: inline-block;
-	}
-	#next {
-		display: inline-block;
-	}
-	ul {
-		display: inline-block;
-	}
+	list-style-type: none;
+	background: #ddd;
+	width: 30%;
+	border: 1px solid black;
+	border-top: 1px solid transparent;
+	cursor: pointer;
 	li {
-		display: inline-block;
-		padding: 30px 20px;
-		font-size: 18px;
-		&.active {
-			background: grey;
+		padding: 10px;
+		border-top: 1px solid black;
+		font-size: 20px;
+		display: block;
+		width: 100%;
+		transition: .3s;
+		&:hover {
+			color: #fff;
+			transition: .3s;
+			background: black;
 		}
 	}
 }
-.tabs-list {
-	.tab {
-		display: none;
-		&.active {
-			display: block;
-		}
-	}
-}*/
-
-
-/*#test {
-	width: 150px;
-	height: 150px;
-	background: orange;
-	margin: 30px;
-}
-#outtext {
-	width: 300px;
-	height: 150px;
-	resize: none;
-	margin: 20px;
-}
-
-#one {
-	width: 200px;
-	height: 200px;
-	background: orange;
-}
-#test {
-	width: 50px;
-	height: 50px;
-	background: orange;
-}*/
-/*
-#top {
-	position: fixed;
-	width: 100px;
-	height: 100px;
-	bottom: 30px;
-	right: 30px;
-}
-#bot {
-	position: fixed;
-	width: 100px;
-	height: 100px;
-	bottom: 30px;
-	right: 130px;
-}
-
-.text {
-	width: 300px;
-	display: block;
-	margin: 0 auto;
-}*/
-
-/*#game {
-	height: 300px;
-	width: 300px;
-	background: orange;
-}
-.block {
-	width: 100px;
-	height: 100px;
-	float: left;
-	border: 1px solid #fff;
-	box-sizing: border-box;
-	line-height: 100px;
-	text-align: center;
-	font-size: 50px;
-	text-transform: uppercase;
-}*/
-
-/** {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-#menu {
-	width: 250px;
-	height: 100vh;
-	background: black;
-	position: fixed;
-	left: -230px;
-	top: 0;
-	transition: all ease 1s;
-}*/
-/*
-@keyframes blink {
-  50% { opacity: 1; }
-  100% { opacity: 0; }
-}
-
-body {
-	background-color: #151515;
-	color: #eee;
-	font-family: 'Share Tech Mono', monospace;
-	user-select: none;
-}
-
-.hidden {
-	display: none;
-}
-
-.password {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 60px;
-	letter-spacing: 5px;
-}
-
-.granted {
-	position: absolute;
-	top: 75%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 30px;
-}
-
-.info {
-	padding-top: 300px;
-	p { margin: 10px; }
-}
-
-.button {
-	background-color: #111;
-	border: solid 1px #888;
-	padding: 8px 25px;
-	font-size: 26px;
-	letter-spacing: 2px;
-	cursor: pointer;
-}
-.rerun {
-	position: absolute;
-	bottom: 15px;
-	right: 15px;
-}
-.start {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.blink {
-	    animation: blink 0.8s steps(1, start) infinite alternate;
-}*/
-
-.tabs {
-	width: 600px;
-	height: 350px;
-	background: pink;
-	margin: 50px auto;
-	font-family: sans-serif;
-}
-.tab-h {
-	display: inline-block;
-	width: 50px;
-	height: 30px;
-	line-height: 30px;
-	border: 1px solid black;
-	text-align: center;
-	&.active {
-		border-bottom: 1px solid white;
-	}
-}
-.tab-b {
-	border: 1px solid black;
-	padding: 20px;
-	display: none;
-}
-.tabs-body {
-	position: relative;
-}
-
