--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -184,3 +184,16 @@ button {
 		display: block;
 	}
 }
+
+.accordeon {
+	li {
+		a {
+			display: block;
+			font-size: 20px;
+			font-weight: 600;
+		}
+		p {
+			display: none;
+		}
+	}
+}
